--- a/styles.css
+++ b/styles.css
@@ -2,16 +2,54 @@
     box-sizing: border-box;
   }
 
-body {
-    background-color: lightblue;
+html {
+    background-color: hsl(212, 45%, 89%);
     width: 1440px;
+    height: 100vh;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: Outfit, sans-serif;
 }
 
 #qr-main {
     background-color: white;
-    height: 400px;
-    width: 300px;
+    height: 600px;
+    width: 400px;
+    border-radius: 5%;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#qr-img-container {
+    height: 440px;
+    width: 370px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 300px
+    margin-top: 20px;
+    display: block;
+    text-align: center;
+}
+
+#qr-img {
+    height: 80%;
+    border-radius: 5%; 
+}
+
+.attribution {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    height: 60px;
+    width: 500px;
+    justify-content: center;
+}
+
+h2 {
+    font-weight: 400;
+    color: hsl(220, 15%, 55%);
+    font-size: 1.4rem;
 }
